# alambique

./: .gitignore  README.md  pyproject.toml
docs/: consolidation-quality.md  propuesta_autonomia_e_iniciativa_lucy.md  session-2026-07-22-hallazgos.md
scripts/: curate_memory.py  rebuild_vectors.py  reconsolidate_session.py
src/alambique/: __init__.py  __main__.py  activation.py  consolidation_retrieval.py  consolidator.py  database.py  llm_http.py  memory_config.py  memory_maintenance.py  models.py  notifications.py  ollama_client.py  recall.py  server.py  thread_anchor.py  tools.py  vector_rebuild.py  vector_store.py  warning_labels.py
src/alambique/tools/: __init__.py  base.py  consolidation.py  handler.py  memory.py  ranking.py  sessions.py  status.py  text.py  workers.py
src/alambique/transcripts/: __init__.py  antigravity_cli.py  base.py  grok_cli.py  opencode_cli.py
tests/: test_antigravity_cli.py  test_consolidation_retrieval.py  test_consolidator.py  test_database.py  test_grok_cli.py  test_helpers.py  test_memory_maintenance.py  test_models.py  test_notifications.py  test_ollama_client.py  test_opencode_cli.py  test_recall.py  test_server.py  test_thread_anchor.py  test_tools.py  test_warning_labels.py
