[project]
name = "alambique"
version = "0.1.0"
description = "Destila conversaciones en hechos y personalidades emergentes"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "sqlite-vec>=0.1",
    "pydantic>=2",
    "httpx>=0.27",
    "starlette>=0.38",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
alambique = "alambique.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
